[package]
authors = ["Navrin <navman360@gmail.com>"]
name = "colour-bot-v2"
version = "0.1.0"

[dependencies]
bigdecimal = "0.0.10"
failure = "0.1.1"
num-traits = "0.1.41"
palette = "0.2.1"
parking_lot = "0.5.3"
png = "0.11.0"
postgres = "0.15.1"
r2d2 = "0.8.2"
read_color = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
svg = "0.5.10"
toml = "0.4.5"
typemap = "0.3.3"

[dependencies.cairo-rs]
features = ["png"]
version = "0.3.0"

[dependencies.diesel]
features = [
    "numeric",
    "postgres",
    "serde_json",
]
version = "1.0.0"

[dependencies.r2d2-diesel]
version = "1.0.0"

[dependencies.resvg]
features = ["cairo-backend"]
version = "0.1.0"

[dependencies.serenity]
branch = "v0.5.0"
git = "https://github.com/zeyla/serenity"
